# test-todomvc-oop

./: .gitignore  .python-version  README.md  pyproject.toml  pyproject0.toml
test_todomvc/model/: __init__.py  app.py
test_todomvc_oop/helpers/: __init__.py  app.py  help.md  todoMVC-test-plan.md
test_todomvc_oop/model/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_common_todos_management.py  test_oop_todomvc.py  test_preconditions.py  test_todomvc_lifecycle_e2e.py  test_todomvc_operations_at_ filter_all_oop.py  test_todomvc_operations_at_filter_all.py
web_tests/: config.prod.env  config.py  config.stage.env  conftest.py  test_preconditions_pydantic_edition.py
