[tool.poetry]
name = "test-todomvc"
version = "0.1.0"
description = "a1-07-more-tests-10-task-md"
authors = ["Datsenko Volodymyr (Shemar) <nastavnyk@gmail.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.9"
webdriver-manager = "^3.3.0"
selene = {version = "^1.0.2", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
